fix plugins tab; improve button bar spacing
git-svn-id: file:///home/awy/mirror/slim/trunk/server@16309 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Default/slimserver.css
+++ b/HTML/Default/slimserver.css
@@ -1054,10 +1054,6 @@ body.settingsMenu {
 	padding-bottom: 0;
 }
 
-#settingsForm {
-	padding-top: 20px;
-}
-
 .statusarea {
 	margin: 10px 20px;
 }
@@ -1132,6 +1128,10 @@ body.settingsMenu {
 	width: 100%;
 	background-color: #eee;
 	z-index: 999;
+}
+
+dif.buttonbarSpacer {
+	height: 20px;
 }
 
 .settings select.stdedit {
